--- a/quantflow-admin/src/main/resources/application.yml
+++ b/quantflow-admin/src/main/resources/application.yml
@@ -69,11 +69,11 @@ spring:
     # redis 配置
     redis:
       # 地址
-      host: localhost
+      host: 192.168.6.100
       # 端口，默认为6379
       port: 6379
       # 数据库索引
-      database: 0
+      database: 3
       # 密码
       password:
       # 连接超时时间
