--- a/quantflow-trading/pom.xml
+++ b/quantflow-trading/pom.xml
@@ -29,6 +29,19 @@
             <groupId>com.quantflow</groupId>
             <artifactId>quantflow-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.quantflow</groupId>
+            <artifactId>quantflow-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.8</version> <!-- 查看最新版本 -->
+        </dependency>
     </dependencies>
 
 </project>
