--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -42,6 +42,7 @@
     "sortablejs": "1.10.2",
     "splitpanes": "2.4.1",
     "vue": "2.6.12",
+    "vue-i18n": "8.28.2",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.5.5",
     "vue-router": "3.4.9",
