--- a/quantflow-admin/src/main/resources/application-dev.yml
+++ b/quantflow-admin/src/main/resources/application-dev.yml
@@ -43,13 +43,13 @@ spring:
   data:
     redis:
       # 地址
-      host: 192.168.6.100
+      host: 127.0.0.1
       # 端口，默认为6379
       port: 6379
       # 数据库索引
       database: 3
       # 密码
-      password:
+      password: wm
   devtools:
     restart:
       enabled: true
