提交新模块与做市方案

--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,8 @@
         <module>quantflow-generator</module>
         <module>quantflow-common</module>
         <module>quantflow-trading</module>
+        <module>quantflow-quote</module>
+        <module>framework</module>
     </modules>
     <packaging>pom</packaging>
 
